# Kursovaya_sql

./: README.md  main.py  pyproject.toml
src/kursovayasql/: ApiCompanies.py  CreateTablesCompanies.py  CreateTablesVacancies.py  DBManager.py  DatabaseCreate.py  EntryIntoCompanies.py  GetVacancies.py  InsertCompanies.py  InsetrVacancies.py  SelectCompanies.py  datebase.ini
test/: test_ApiCompanies.py  test_CreateTablesCompanies.py  test_CreateTablesVacancies.py  test_DBManager.py  test_DatabaseCreate.py  test_GetVacancies.py  test_InsertCompanies.py  test_InsertVacancies.py  test_SelectCompanies.py
