[project]
name = "kursovayasql"
version = "0.1.0"
description = ""
authors = [
    {name = "Максим Полозков",email = "pipl82308@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "requests-mock (>=1.12.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "kursovayasql", from = "src"}]


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
isort = "^7.0.0"
black = "^25.11.0"
mypy = "^1.18.2"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
#no_implicit_optional = true
warn_return_any = true
exclude = 'venv'